@startuml er_diagram_target
title ER Diagram — Схема данных PostgreSQL 18 + pgvector (To-Be)

entity "contractors" as contractor {
  * id : uuid <<PK>>
  --
  name : varchar(255)
  inn : varchar(12) <<UNIQUE>>
  contact_phone : varchar(30)
  contact_email : varchar(100)
  contract_number : varchar(50)
  status : varchar(20)
  created_at : timestamptz
}

entity "sites" as site {
  * id : uuid <<PK>>
  --
  * contractor_id : uuid <<FK>>
  name : varchar(255)
  address : text
  timezone : varchar(50)
  region : varchar(100)
}

entity "assets" as asset {
  * id : uuid <<PK>>
  --
  * site_id : uuid <<FK>>
  local_code : varchar(50)
  name : varchar(255)
  name_embedding : vector(1536)
  criticality : varchar(20)
  status : varchar(20)
}

entity "contracts" as contract {
  * id : uuid <<PK>>
  --
  * site_id : uuid <<FK, UNIQUE>>
  plan_type : varchar(20)
  sla_response_minutes : integer
  service_window_cron : varchar(50)
  penalty_rate_hourly : numeric(10,2)
  is_active : boolean
}

entity "tickets" as ticket {
  * id : uuid <<PK>>
  --
  ticket_number : varchar(50) <<UNIQUE>>
  * contractor_id : uuid <<FK>>
  * site_id : uuid <<FK>>
  * asset_id : uuid <<FK>>
  temporal_workflow_id : varchar(100)
  priority : varchar(20)
  summary : text
  description : text
  sla_deadline : timestamptz
  status : varchar(30)
  confidence_score : numeric(3,2)
  created_at : timestamptz
}

entity "rag_documents" as rag_doc {
  * id : uuid <<PK>>
  --
  * asset_id : uuid <<FK>>
  doc_title : varchar(255)
  content_chunk : text
  embedding : vector(1536)
}

entity "llm_trace_metrics" as llm_trace {
  * id : uuid <<PK>>
  --
  * ticket_id : uuid <<FK>>
  trace_id : varchar(100)
  model_name : varchar(50)
  prompt_tokens : integer
  completion_tokens : integer
  latency_ms : integer
  cost_usd : numeric(8,6)
}

contractor ||..o{ site
site ||..o{ asset
site ||..|| contract
contractor ||..o{ ticket
site ||..o{ ticket
asset ||..o{ ticket
ticket ||..o{ llm_trace
asset ||..o{ rag_doc

@enduml